# libentity

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Earthfile  LICENSE  README.md  compile_flags.txt  entity.sublime-project  premake4.lua  premake5.lua  runner  strip
.forgejo/workflows/: build.yaml  check.yaml
.github/workflows/: main.yml  sync.yml
include/entity/: any.hpp  bson.h  bson.hpp  bson2.h  codec.h  codec.hpp  entity.h  entity.hpp  entity2.h  json.h  json.hpp  json2.h  map.h  mapping.h  mapping.hpp  mapping2.h  old_entity.h  parser.h  parser.hpp  query.h  query.hpp  tree.h  tree.hpp  tree2.h  treemap.hpp  utilities.h  utilities.hpp  value.h  vmap.h  vmap2.h  vref.hpp  xml.h  yaml.h
include/entity/experimental/: codec.hpp  object.hpp  treeview.hpp  view.hpp
include/entity/utilities/: base64.hpp  compare.hpp
include/entity/vref/: array.hpp  base.hpp  (+10 more)
include/test/: entities.h
include/xUnit++/: Attributes.h  EventLevel.h  ExportApi.h  IOutput.h  ITestDetails.h  ITestEvent.h  LineInfo.h  Suite.h  TestCollection.h  TestDetails.h  TestEvent.h  TestEventRecorder.h  xUnit++.h  xUnitAssert.h  xUnitCheck.h  xUnitLog.h  xUnitMacroHelpers.h  xUnitMacros.h  xUnitTest.h  xUnitTestRunner.h  xUnitTime.h  xUnitToString.h  xUnitWarn.h
src/benchmark/: benchmark.cpp
src/entity/: bson.cpp  entity.cpp  json.cpp  mapping.cpp  old_entity.cpp  parser.cpp  tree.cpp  utilities.cpp  value.cpp  xml.cpp  yaml.cpp
src/test/: bson.cpp  bson2.cpp  entity.cpp  json.cpp  json2.cpp  map.cpp  query.cpp  test.cpp  tree.cpp  utilities.cpp  value.cpp  vref.cpp  xml.cpp  yaml.cpp
(+2 files in other folders)
